--- a/ProyectoIntegrado_JMP/src/app/components/social/social.component.css
+++ b/ProyectoIntegrado_JMP/src/app/components/social/social.component.css
@@ -1,3 +1,19 @@
-img{
+/*img{
+    width: 40px;
+}*/
+
+#WhatsApp{
+    width: 40px;
+}
+
+#Facebook{
+    width: 40px;
+}
+
+#Instagram{
+    width: 40px;
+}
+
+#Twitter{
     width: 40px;
 }
