--- a/ProyectoIntegrado_JMP/src/app/components/social/social.component.css
+++ b/ProyectoIntegrado_JMP/src/app/components/social/social.component.css
@@ -1,19 +1,20 @@
-/*img{
-    width: 40px;
-}*/
-
 #WhatsApp{
+    margin: 5px;
     width: 40px;
+    cursor: pointer;
 }
 
 #Facebook{
+    margin: 5px;
     width: 40px;
 }
 
 #Instagram{
+    margin: 5px;
     width: 40px;
 }
 
 #Twitter{
+    margin: 5px;
     width: 40px;
 }
