--- a/ProyectoIntegrado_JMP/src/app/components/social/social.component.html
+++ b/ProyectoIntegrado_JMP/src/app/components/social/social.component.html
@@ -1,6 +1,6 @@
 <div>
-    <a href="https://wa.me/543777296611" target="_blank"><img src="../../../assets/wpp.png" id="WhatsApp"></a>
-    <a href="https://www.facebook.com/JuanMatiasPinat" target="_blank"><img src="../../../assets/face.png" id="Facebook"></a>
-    <a href="https://www.instagram.com/juanmatiaspinat" target="_blank"><img src="../../../assets/insta.png" id="Instagram"></a>
-    <a href="https://twitter.com/JuanMatiasPinat" target="_blank"><img src="../../../assets/twitter.png" id="Twitter"></a>
+    <a href="https://wa.me/543777296611" target="_blank"><img src="../../../assets/wppC.png" id="WhatsApp"></a>
+    <a href="https://www.facebook.com/JuanMatiasPinat" target="_blank"><img src="../../../assets/faceC.png" id="Facebook"></a>
+    <a href="https://www.instagram.com/juanmatiaspinat" target="_blank"><img src="../../../assets/instaC.png" id="Instagram"></a>
+    <a href="https://twitter.com/JuanMatiasPinat" target="_blank"><img src="../../../assets/twitterC.png" id="Twitter"></a>
 </div>
