--- a/ProyectoIntegrado_JMP/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoIntegrado_JMP/src/app/components/acerca-de/acerca-de.component.html
@@ -9,7 +9,7 @@
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
         <span>
             <h1>Acerca de mi</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo consectetur, deleniti sapiente error recusandae quisquam tempore ad impedit delectus iusto esse nemo. Totam soluta fugit harum, debitis dolorem ut facere.</p>
+            <p>Soy estudiante de Lic. en Sistamas, nacido y conviviendo en Corrientes Capital...</p>
         </span>
     </div>
 </div>
