--- a/ProyectoIntegrado_JMP/src/app/components/social/social.component.html
+++ b/ProyectoIntegrado_JMP/src/app/components/social/social.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="row">
     <a href="https://wa.me/543777296611" target="_blank"><img src="../../../assets/wppC.png" id="WhatsApp"></a>
     <a href="https://www.facebook.com/JuanMatiasPinat" target="_blank"><img src="../../../assets/faceC.png" id="Facebook"></a>
     <a href="https://www.instagram.com/juanmatiaspinat" target="_blank"><img src="../../../assets/instaC.png" id="Instagram"></a>
