--- a/ProyectoIntegrado_JMP/src/app/components/educacion/educacion.component.html
+++ b/ProyectoIntegrado_JMP/src/app/components/educacion/educacion.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div id="rowEducacion" class="row">
     <h1>Educacion: </h1>
     <div class="col-lg-1"></div>
     <div class="col-lg-11">
