--- a/ProyectoIntegrado_JMP/src/app/components/experiencia/experiencia.component.html
+++ b/ProyectoIntegrado_JMP/src/app/components/experiencia/experiencia.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div id="rowExperiencia" class="row">
     <h1>Experiencia laboral: </h1>
     <div class="col-lg-1"></div>
     <div class="col-lg-11">
