--- a/ProyectoIntegrado_JMP/src/app/components/footer/footer.component.html
+++ b/ProyectoIntegrado_JMP/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div id="footerRow" class="row">
     <footer>
         <p> Pinat, Juan Matias   |   ARGENTINA PROGRAMA 2022 ©</p>
         <p> Corrientes, Capital, Argentina.</p>
