--- a/ProyectoIntegrado_JMP/src/app/components/header/header.component.html
+++ b/ProyectoIntegrado_JMP/src/app/components/header/header.component.html
@@ -1,4 +1,7 @@
-<div class="row">
+<div id="rowHeader" class="row">
     <app-logo-ap></app-logo-ap>
-    <app-banner></app-banner>
+   
+</div>
+<div id="rowRowBanner" class="row">
+     <app-banner></app-banner>
 </div>
