--- a/ProyectoIntegrado_JMP/src/app/components/hys/hys.component.html
+++ b/ProyectoIntegrado_JMP/src/app/components/hys/hys.component.html
@@ -1,6 +1,6 @@
-<div class="row">
-    <title>Hard & Soft skills</title>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
+<div id="rowHyS" class="row">
+    <h2>Hard & Soft skills</h2>
+    <div id="fila1Hys" class="text-center col-sm-4 col-md-4 col-lg-4">
         <circle-progress
         [percent]="80"
         [radius]="100"
