--- a/ProyectoIntegrado_JMP/src/app/components/acerca-de/acerca-de.component.css
+++ b/ProyectoIntegrado_JMP/src/app/components/acerca-de/acerca-de.component.css
@@ -1,6 +1,3 @@
-.row{
-    padding: 20px;
-}
 div{
     background-color: #FFFFFF;
     text-align: center;
@@ -9,17 +6,47 @@ div{
 /* Estilo de foto de perfil */
 @media (min-width: 576px){
     #fotoPerfil{
-        position: absolute;
-        width: 13%;
+        /* position: absolute; */
+        width: 100%;
         border-radius: 100%;
         box-shadow: 3px 3px 3px grey;
-        left: 3%;
-        top: 640px;
+       /*  left: 3%;
+        top: 640px; */
     }
 }
 
 /* Etiqueta nombre */
 #nombre{
     font-weight: bold;
-    margin-top: 30%;
+    /* margin-top: 30%; */
 }
+
+
+#rowAcercaDe{
+    padding: 0px;
+    box-sizing: border-box;
+    margin-bottom: 2rem;
+    background-color: red;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+    #rowAcercaDe div{
+        display: flex;
+        justify-content: flex-center;
+        align-items:center;
+    }
+
+    #divNombreCargo{
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items: center;
+    }
+
+    #divAcercaDeInformacion{
+        display: flex;
+        justify-content:center;
+        align-items: center;
+    }
