--- a/ProyectoIntegrado_JMP/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoIntegrado_JMP/src/app/components/acerca-de/acerca-de.component.html
@@ -1,15 +1,17 @@
-<div class="row">
+<div id="rowAcercaDe" class="row">
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <img src="../../../assets/fotoPerfil.jpg" class="img-fluid" id="fotoPerfil">
     </div>
-    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+    <div id="divNombreCargo" class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <p id="nombre">PINAT, Juan Matias</p>
         <p>Full Stack Developer Jr</p>
     </div>
-    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+    <div id="divAcercaDeInformacion" class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
         <span>
             <h1>Acerca de mi</h1>
-            <p>Soy estudiante de Lic. en Sistamas, nacido y conviviendo en Corrientes Capital...</p>
+            <p>Soy estudiante de Lic. en Sistemas, nacido y conviviendo en Corrientes Capital...</p>
         </span>
     </div>
 </div>
+
+
