--- a/ProyectoIntegrado_JMP/src/app/components/banner/banner.component.css
+++ b/ProyectoIntegrado_JMP/src/app/components/banner/banner.component.css
@@ -1,9 +1,25 @@
 .row{
-    width: 100%;
+    width: 100vw;
     margin: 0px;
 }
 
 img{
-    width: 100%;
-    height: 500px;
+    /* width: 100vw;
+    height: 500px; */
 }
+
+
+#rowBanner{
+    margin: 0px;
+    padding: 0px;
+    height: 500px;
+    width: 100%;
+    box-sizing: border-box;
+    
+} 
+
+#imgBanner{
+    width: 100vw;
+    box-sizing: border-box;
+}
+
