--- a/ProyectoIntegrado_JMP/src/app/components/banner/banner.component.html
+++ b/ProyectoIntegrado_JMP/src/app/components/banner/banner.component.html
@@ -1,3 +1,3 @@
-<div class="row">
-    <img src="../../../assets/banner.png" alt="imgBanner">
+<div id="rowBanner" class="row">
+    <img id="imgBanner" src="../../../assets/banner.png" alt="imgBanner">
 </div>
