--- a/ProyectoIntegrado_JMP/src/app/components/educacion/educacion.component.css
+++ b/ProyectoIntegrado_JMP/src/app/components/educacion/educacion.component.css
@@ -1,13 +1,19 @@
 row{
     padding: 20px;
-    margin: 5px;
+    
 }
 div{
     background-color: #ffffff;
 }
 h1{
-    margin: 25px;
+    padding: 25px;
 }
 h1, h3{
     display: inline;
+}
+
+#rowEducacion{
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
 }
