--- a/ProyectoIntegrado_JMP/src/app/components/footer/footer.component.css
+++ b/ProyectoIntegrado_JMP/src/app/components/footer/footer.component.css
@@ -1,11 +1,21 @@
 .row{
     background: #a1b5cb;
 }
+
 footer{
     color: #fefefe;
-    font-size: 14px;
+    box-sizing: border-box;
+    font-size: 1rem;
     display: flex;
     flex-direction: column;
     text-align: center;
+    margin: 0px;
     box-shadow: 2px -2px 5px #999;
+}
+
+
+#footerRow{
+    box-sizing: border-box;
+    margin:0px;
+    padding: 0px;
 }
