--- a/ProyectoIntegrado_JMP/src/app/components/header/header.component.css
+++ b/ProyectoIntegrado_JMP/src/app/components/header/header.component.css
@@ -4,6 +4,17 @@ div{
 
 app-social{
     float: right;
-    margin: 30px;
-    margin-top: 30px;
+   
+}
+
+#rowHeader{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+#rowRowBanner {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
