--- a/ProyectoIntegrado_JMP/src/app/components/hys/hys.component.css
+++ b/ProyectoIntegrado_JMP/src/app/components/hys/hys.component.css
@@ -1,4 +1,24 @@
 .row{
     background-color: #a1b5cb;
-    padding: 20px;
+    box-sizing: border-box;
+
+}
+
+
+#fila1Hys{
+    box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
+}
+
+#rowHyS{
+    box-sizing: border-box;
+    padding: 0px;
+    padding-top: 3%;
+    padding-bottom: 5%;
+}
+
+#rowHyS h2{
+    text-align: center;
+    margin-bottom: 20px;
 }
