--- a/ProyectoIntegrado_JMP/src/app/components/proyecto/proyecto.component.css
+++ b/ProyectoIntegrado_JMP/src/app/components/proyecto/proyecto.component.css
@@ -15,3 +15,16 @@
 .img-proyecto{
     box-shadow: 10px 10px 30px #000000;
 }
+
+
+#rowProyecto{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+#proyectosRealizados{
+    
+}
