--- a/ProyectoIntegrado_JMP/src/app/components/proyecto/proyecto.component.html
+++ b/ProyectoIntegrado_JMP/src/app/components/proyecto/proyecto.component.html
@@ -1,7 +1,7 @@
-<div class="row">
+<div id="rowProyecto" class="row">
     <h1>Proyectos realizados</h1>
     <div class="contenedor">
-        <div class="col-sm-12 col-md-7 col-lg-7 parte1">
+        <div id="proyectosRealizados" class="col-sm-12 col-md-7 col-lg-7 parte1">
             <h1>Calculadora</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex facere esse officia placeat iusto maxime veniam quia doloribus quibusdam, saepe cum explicabo earum ratione totam cupiditate culpa. Alias, fugit aperiam.</p>
         </div>
