--- a/ProyectoIntegrado_JMP/Front-End-Angular/src/app/components/banner/banner.component.html
+++ b/ProyectoIntegrado_JMP/Front-End-Angular/src/app/components/banner/banner.component.html
@@ -1,3 +1,3 @@
-<div id="rowBanner" class="row">
+<div class="row">
     <img id="imgBanner" src="../../../assets/banner.png" alt="imgBanner">
 </div>
