--- a/ProyectoIntegrado_JMP/Front-End-Angular/src/app/components/hys/hys.component.html
+++ b/ProyectoIntegrado_JMP/Front-End-Angular/src/app/components/hys/hys.component.html
@@ -1,13 +1,13 @@
-<div id="rowHyS" class="row">
+<div class="row">
     <h2>Hard & Soft skills</h2>
-    <div id="fila1Hys" class="text-center col-sm-4 col-md-4 col-lg-4">
+    <div class="text-center col-sm-4 col-md-4 col-lg-4">
         <circle-progress
-        [percent]="80"
+        [percent]="70"
         [radius]="100"
         [imageSrc]="'../assets/html.png'"
         [showImage]="true"
-        [imageHeight]="90"
-        [imageWidth]="90"
+        [imageHeight]="70"
+        [imageWidth]="70"
         [showUnits]="false"
         [showSubtitle]="false"
         [outerStrokeWidth]="16"
@@ -20,7 +20,7 @@
     </div>
     <div class="text-center col-sm-4 col-md-4 col-lg-4">
         <circle-progress
-        [percent]="80"
+        [percent]="60"
         [radius]="100"
         [imageSrc]="'../assets/css.png'"
         [showImage]="true"
@@ -38,7 +38,7 @@
     </div>
     <div class="text-center col-sm-4 col-md-4 col-lg-4">
         <circle-progress
-        [percent]="80"
+        [percent]="50"
         [radius]="100"
         [imageSrc]="'../assets/js.png'"
         [showImage]="true"
@@ -56,7 +56,7 @@
     </div>
     <div class="text-center col-sm-4 col-md-4 col-lg-4">
         <circle-progress
-        [percent]="80"
+        [percent]="60"
         [radius]="100"
         [imageSrc]="'../assets/angular.png'"
         [showImage]="true"
@@ -74,7 +74,7 @@
     </div>
     <div class="text-center col-sm-4 col-md-4 col-lg-4">
         <circle-progress
-        [percent]="80"
+        [percent]="50"
         [radius]="100"
         [imageSrc]="'../assets/bootstrap.png'"
         [showImage]="true"
@@ -92,7 +92,7 @@
     </div>
     <div class="text-center col-sm-4 col-md-4 col-lg-4">
         <circle-progress
-        [percent]="80"
+        [percent]="50"
         [radius]="100"
         [imageSrc]="'../assets/node.png'"
         [showImage]="true"
