--- a/ProyectoIntegrado_JMP/Front-End-Angular/src/app/components/logo-ap/logo-ap.component.css
+++ b/ProyectoIntegrado_JMP/Front-End-Angular/src/app/components/logo-ap/logo-ap.component.css
@@ -3,13 +3,20 @@
     justify-content: space-between;
     align-items: center;
 }
+
 .redes{
     margin-right: 0.5cm;
 }
 
 #logoAP{
-    width: 200px;
+    width: 150px;
 }
+
+img{
+    width: 50px;
+}
+
+
 
 #WhatsApp{
     margin: 3.5px;
@@ -43,5 +50,9 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    redes img{
+        margin: 0.2cm;
     }
 }
